# bio-informatics

./: .gitattributes  .gitignore  CLAUDE.md  README.md
digital-cell-twin/: CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
digital-cell-twin/docs/: data-substrate.md  papers.md
digital-cell-twin/notebooks/: 0_data_substrate.py
digital-cell-twin/scripts/: run_baseline.py  train.py
digital-cell-twin/src/dct/: __init__.py  baseline.py  data.py  eval.py
